; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_values.c_free_all_values.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_values.c_free_all_values.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value = type { i32 }

@all_values = common dso_local global %struct.value* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_all_values() #0 {
  %1 = alloca %struct.value*, align 8
  %2 = alloca %struct.value*, align 8
  %3 = load %struct.value*, %struct.value** @all_values, align 8
  store %struct.value* %3, %struct.value** %1, align 8
  br label %4

4:                                                ; preds = %12, %0
  %5 = load %struct.value*, %struct.value** %1, align 8
  %6 = icmp ne %struct.value* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.value*, %struct.value** %1, align 8
  %9 = call %struct.value* @VALUE_NEXT(%struct.value* %8)
  store %struct.value* %9, %struct.value** %2, align 8
  %10 = load %struct.value*, %struct.value** %1, align 8
  %11 = call i32 @value_free(%struct.value* %10)
  br label %12

12:                                               ; preds = %7
  %13 = load %struct.value*, %struct.value** %2, align 8
  store %struct.value* %13, %struct.value** %1, align 8
  br label %4

14:                                               ; preds = %4
  store %struct.value* null, %struct.value** @all_values, align 8
  ret void
}

declare dso_local %struct.value* @VALUE_NEXT(%struct.value*) #1

declare dso_local i32 @value_free(%struct.value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
